# mzmlpy

./: .gitignore  HISTORY.md  MANIFEST.in  README.md  justfile  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: python-package.yml
src/mzmlpy/: __init__.py  constants.py  content.py  decoder.py  file_interface.py  lookup.py  regex_patterns.py  run.py  spectra.py  util.py
src/mzmlpy/elems/: __init__.py  data_processing.py  dtree_wrapper.py  file_desc.py  instrument_config.py  params.py  referenceable_param_group.py  run.py  sample.py  scan_setting.py  software.py
src/mzmlpy/file_classes/: __init__.py  interface.py  standardGzip.py  standardMzml.py  xml_tuple.py
tests/: test_chromatogram.py  test_data_processing.py  test_file_description.py  test_instrument_configuration.py  test_referenceable_param_group.py  test_sample_list.py  test_scan_settings.py  test_software_list.py  test_spectra.py
